Added Persistence layer and refactored code.

--- a/TechTrack.Application/TechTrack.Application.csproj
+++ b/TechTrack.Application/TechTrack.Application.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Equipment\Queries\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
