--- a/TechTrack/TechTrack/TechTrack.Blazor.csproj
+++ b/TechTrack/TechTrack/TechTrack.Blazor.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-TechTrack-073d6090-8e71-47db-9003-2d90f04fa7d6</UserSecretsId>
+	  <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
