Added user configuration.

--- a/TechTrack/TechTrack.Client/TechTrack.Blazor.Client.csproj
+++ b/TechTrack/TechTrack.Client/TechTrack.Blazor.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,8 +10,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\UsersWithEquipments.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\UsersWithEquipments.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\UsersWithEquipments.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\UsersWithEquipments.razor" />
   </ItemGroup>
 
 </Project>
