Added common project.

--- a/TechTrack.Application/TechTrack.Application.csproj
+++ b/TechTrack.Application/TechTrack.Application.csproj
@@ -16,11 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TechTrack.Common\TechTrack.Common.csproj" />
     <ProjectReference Include="..\TechTrack.Domain\TechTrack.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Dtos\" />
   </ItemGroup>
 
 </Project>
