--- a/TechTrack/TechTrack.Client/TechTrack.Blazor.Client.csproj
+++ b/TechTrack/TechTrack.Client/TechTrack.Blazor.Client.csproj
@@ -14,8 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +30,10 @@
 
   <ItemGroup>
     <None Include="Pages\UsersWithEquipments.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\TechTrack.Common\TechTrack.Common.csproj" />
   </ItemGroup>
 
 </Project>
