--- a/Techtrack.Ui/Techtrack.Ui.Client/Techtrack.Ui.Client.csproj
+++ b/Techtrack.Ui/Techtrack.Ui.Client/Techtrack.Ui.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,26 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Pages\Equipments\Equipments.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <UpToDateCheckInput Remove="Pages\Equipments\Equipments.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <_ContentIncludedByDefault Remove="Pages\Equipments\Equipments.razor" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Pages\Equipments\Equipments.razor" />
   </ItemGroup>
 
   <ItemGroup>
