--- a/Techtrack.Ui/Techtrack.Ui/Techtrack.Ui.csproj
+++ b/Techtrack.Ui/Techtrack.Ui/Techtrack.Ui.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\Shared\" />
+  </ItemGroup>
+
 </Project>
